--- a/WebContent/back_end/activity/css/styles.css
+++ b/WebContent/back_end/activity/css/styles.css
@@ -192,6 +192,7 @@ a.btn:hover, button:hover {
   opacity: 0.8; }
 
 a.btn:active, button:active {
+  outline: none;
   box-shadow: inset 0px 0px 500px rgba(0, 0, 0, 0.1);
   opacity: 1; }
 
