--- a/WebContent/front_end/assets/css/style.css
+++ b/WebContent/front_end/assets/css/style.css
@@ -158,7 +158,7 @@ img {
 /*================================
 Default Btn Style 
 ===================================*/
-.default-btn, btn {
+.default-btn, .btn {
   display: inline-block;
   padding: 12px 42px;
   text-align: center;
@@ -173,7 +173,7 @@ Default Btn Style
   border: none;
 }
 
-.default-btn:hover, btn:hover {
+.default-btn:hover, .btn:hover {
   color: white;
   background-color: rgba(179,140,97,0.8);
   box-shadow: 0px 0px 0px 0px rgba(179,140,97,0.2);
