前台 首頁串資料庫、信用卡頁面(含js/css) 後台 房間管理的新增房型、部份DAO修正關連線方式

--- a/WebContent/front_end/assets/css/style.css
+++ b/WebContent/front_end/assets/css/style.css
@@ -3270,10 +3270,11 @@ Testimonials Area
 
 .testimonials-img {
   position: relative;
-  /* margin-left: 50px; */
   margin-bottom: 30px;
   right: -100px;
   z-index: 2;
+  padding: 20px;
+  border: 1px solid #e3e3e3;
 }
 
 .testimonials-img img {
