--- a/WebContent/front_end/assets/css/style.css
+++ b/WebContent/front_end/assets/css/style.css
@@ -212,7 +212,7 @@ Default Btn Style
 }
 
 .btn-bg-one, .btn-primary {
-  background-color: #996A4D;
+  background-color: #a3785e;
   color: #ffffff;
   box-shadow: 0px 4px 4px 1px rgba(179,140,97,0.2);
 }
@@ -1121,7 +1121,7 @@ Banner Form Area
   font-size: 20px;
   position: absolute;
   top: 55%;
-  left: 95px;
+  left: 80%;
 }
 
 .banner-form .form-group label {
@@ -1169,8 +1169,8 @@ Banner Form Area
   margin-bottom: 0px;
   padding-left: 20px;
   border-radius: 50px;
-  background-color: #B56952;
-  color: #ffffff;
+  background-color: transparent;
+  color: #555555;
   z-index: 1;
 }
 
@@ -1210,9 +1210,8 @@ Banner Form Area
   height: 8px;
   width: 8px;
   border-color: #555555;
-  right: auto;
   top: 42%;
-  left: 35px;
+  left: 80%;
 }
 
 /*=================================
@@ -2736,7 +2735,7 @@ Room Area
   right: 0;
   width: 0;
   height: 100%;
-  background-color: #F5F5F5;
+  background-color: #F7F6F2;
   -webkit-transition: 0.7s;
   transition: 0.7s;
   opacity: 0;
@@ -3010,7 +3009,7 @@ Room Area
 
 .room-details-slider .owl-nav .owl-prev:hover {
   color: #ffffff !important;
-  background-color: #EE786C !important;
+  background-color: #cda274 !important;
 }
 
 .room-details-slider .owl-nav .owl-next {
@@ -3033,7 +3032,7 @@ Room Area
 
 .room-details-slider .owl-nav .owl-next:hover {
   color: #ffffff !important;
-  background-color: #EE786C !important;
+  background-color: #cda274 !important;
 }
 
 .room-details-item {
@@ -6264,4 +6263,59 @@ input[type=text]:focus,input[type=search]:focus,input[type=password]:focus,input
 }
 ::placeholder{
     color: #8FC2C2;
+}
+.flatpickr-day.selected, .flatpickr-day:hover {
+	background-color: #cda274;
+	color: #fff;
+}
+    
+.flatpickr-day.selected, .flatpickr-day.startRange, .flatpickr-day.endRange, .flatpickr-day.selected.inRange, .flatpickr-day.startRange.inRange, .flatpickr-day.endRange.inRange, .flatpickr-day.selected:focus, .flatpickr-day.startRange:focus, .flatpickr-day.endRange:focus, .flatpickr-day.selected:hover, .flatpickr-day.startRange:hover, .flatpickr-day.endRange:hover, .flatpickr-day.selected.prevMonthDay, .flatpickr-day.startRange.prevMonthDay, .flatpickr-day.endRange.prevMonthDay, .flatpickr-day.selected.nextMonthDay, .flatpickr-day.startRange.nextMonthDay, .flatpickr-day.endRange.nextMonthDay {
+    background: #cda274;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    color: #fff;
+    border-color: #cda274;
+}
+
+/* body的scrollbar */
+::-webkit-scrollbar {
+	width: 16px;
+	background-color: #F7F6F2;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(76, 53, 38, 0.6);
+	background-color: #d9bf8a;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: #e3cfa8;
+}
+
+::-webkit-scrollbar-button:single-button {
+	display: block;
+	border-style: solid;
+	height: 12px;
+	width: 16px;
+}
+/* Up */
+::-webkit-scrollbar-button:single-button:vertical:decrement {
+	border-width: 0 8px 8px 8px;
+	border-color: #F7F6F2 #F7F6F2 #B38C61 #F7F6F2;
+	cursor: pointer;
+}
+
+::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
+	border-color: #F7F6F2 #F7F6F2 #d4b77b #F7F6F2;
+}
+/* Down */
+::-webkit-scrollbar-button:single-button:vertical:increment {
+	border-width: 8px 8px 0 8px;
+	border-color: #B38C61 #F7F6F2 #F7F6F2 #F7F6F2;
+}
+
+::-webkit-scrollbar-button:vertical:single-button:increment:hover {
+	border-color: #d4b77b #F7F6F2 #F7F6F2 #F7F6F2;
+	cursor: pointer;
 }
