改CSS 從rem 改成 px

--- a/WebContent/back_end/activity/css/act/addAct.css
+++ b/WebContent/back_end/activity/css/act/addAct.css
@@ -1,8 +1,5 @@
 @charset "UTF-8";
-
-	html { 
-		font-size:62.5%;
-	}	
+		
 	div.twoBtn{
 		margin-top:5%;
 		width:40%;
@@ -21,14 +18,14 @@
 	.col-form-label{
 		vertical-align:middle;
 		line-height:70px;
-		font-size:2.2rem;
+		font-size:22px;
 		color:#00A600;
 	}
-	.form-control{
-		border-radius:2rem;
+	div .form-control{
+		border-radius:20px;
 		border:1px solid #4F4F4F;
-		margin-top:1rem;
-		font-size:2.2rem;
+		margin-top:10px;
+		font-size:22px;
 	}
 	
 	.actInstructionLabel{
@@ -42,12 +39,12 @@
 		width:35%;
 		height:10%;
 		color:#D94600;
-		font-size:3rem;
+		font-size:30px;
 		background-color:#F0FFF0;
 	}	
 	option{
 		width:30%;
-		font-size:2.2rem;
+		font-size:22px;
 		text-align-last: center;
 	}
 /* 	textarea */
@@ -65,6 +62,6 @@
 	}
 	.col-lg-6{
 		position:relative !important;
-		top:1rem !important;
+		top:10px !important;
 	}
 	
