--- a/WebContent/back_end/activity/css/act/selectAct.css
+++ b/WebContent/back_end/activity/css/act/selectAct.css
@@ -1,43 +1,35 @@
 @charset "UTF-8";
-
-	html{
-		font-size:62.5%;
-	}
+	
 	table.table{
 		width:98%;
-		height:50rem;
+		height:50px;
 	}
 	table th{
-		font-size:1.4rem;
+		font-size:17px;
 		text-align:center;
 		color:red;
 		vertical-align:middle;
 	}	
 	table td{
-		font-size:1.4rem;
+		font-size:16px;
 		text-align:center;
 	}	
 	textarea.actInstruction{
-		font-size:1.8rem;
-		height:10rem;
+		font-size:18px;
+		height:100px;
 	}	
 	div.query{
-		width:15rem;
 		position:absolute;
-		top:1rem;
-		right:1.5rem;
+		top:10px;
+		right:15px;
 		z-index:999;	
 	}	
 	select.querySelect{
-		font-size:1.5rem;
+		font-size:15px;
 	}
 	table tr td.upstate{
 		color:#28FF28;
 	}	
 	table tr td.downstate{
 		color:#FF2D2D;
-	}
-	div.updateAndSwitch{
-		position:absolute;
-		top:-3.2rem;
 	}
