--- a/WebContent/back_end/activity/css/act/addAct.css
+++ b/WebContent/back_end/activity/css/act/addAct.css
@@ -50,11 +50,12 @@
 /* 	textarea */
 	#actInstruction{
 		resize: none;
-    	overflow: hidden;
     	min-height: 50px;
-    	max-height: 100px;
+    	max-height: 150px;
+    	height:150px;
     	width:300px;
     	margin-left:5px;
+    	overflow-x:hidden;
 	}
 	.form-control:focus{
 		color:#A23400;
