後台訂單明細 多了已取消頁面 跟 已改期

--- a/WebContent/back_end/activity/css/act/addAct.css
+++ b/WebContent/back_end/activity/css/act/addAct.css
@@ -36,8 +36,8 @@
 		margin-left:0;
 	}
 	.select{
-		width:35%;
-		height:10%;
+		width:250px;
+		height:50px;
 		color:#D94600;
 		font-size:30px;
 		background-color:#F0FFF0;
